--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@rails/webpacker": "5.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^5.1.3",
+    "clsx": "^1.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stimulus": "^3.0.1",
     "turbolinks": "^5.2.0",
+    "uuidv4": "^6.2.13",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
