--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^1.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "stimulus": "^3.0.1",
     "turbolinks": "^5.2.0",
